deploy/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: chainguard-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:454448876799:certificate/f63850d1-8cd2-4d96-b722-8234b6ebb48a
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - host: "atiqabubakar.sbs"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dashboard-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-frontend
            port:
              number: 3000
  - host: "dashboard.atiqabubakar.sbs"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dashboard-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-frontend
            port:
              number: 3000
